# psssh

./: .gitignore  LICENSE  README.md  psssh.spec  pyproject.toml  requirements.txt
packaging/gentoo/: README.md
packaging/gentoo/dev-python/pyte/: pyte-0.8.2.ebuild
packaging/gentoo/net-misc/psssh/: metadata.xml  psssh-1.1.2.ebuild  psssh-1.1.3.ebuild
packaging/linux/: psssh.desktop
psssh/: __init__.py  __main__.py  app.py  bookmarks.py  colors.py  commands.py  connection.py  host_keys.py  icon.py  local_shell_widget.py  local_shell_worker.py  main_window.py  secrets_store.py  session_widget.py  settings.py  sftp_panel.py  sftp_worker.py  ssh_worker.py  terminal_widget.py  theme.py  tunnel.py
psssh/dialogs/: bookmark_dialog.py  command_dialog.py  settings_dialog.py  tunnel_dialog.py
